Fix plus alignment on lightbox button

--- a/source/_assets/sass/_themes.scss
+++ b/source/_assets/sass/_themes.scss
@@ -76,7 +76,7 @@ section.theme {
 
 				font-size: 0.75em;
 				content: '+';
-				line-height: $size - 0.1;
+				line-height: $size;
 
 				position: absolute;
 				bottom: 0; /* -$size/8; */
